--- a/obs/forms/OBSBasicSettings.ui
+++ b/obs/forms/OBSBasicSettings.ui
@@ -342,7 +342,7 @@
           </widget>
          </item>
          <item row="5" column="1">
-          <widget class="QStackedWidget" name="stackedWidget">
+          <widget class="QStackedWidget" name="fpsTypes">
            <property name="currentIndex">
             <number>0</number>
            </property>
@@ -364,6 +364,9 @@
               <widget class="QComboBox" name="fpsCommon">
                <property name="currentText">
                 <string notr="true">30</string>
+               </property>
+               <property name="currentIndex">
+                <number>3</number>
                </property>
                <item>
                 <property name="text">
@@ -491,6 +494,22 @@
            </widget>
           </widget>
          </item>
+         <item row="6" column="1">
+          <widget class="QLabel" name="errorText">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">color: rgb(255, 0, 4);</string>
+           </property>
+           <property name="text">
+            <string notr="true"/>
+           </property>
+          </widget>
+         </item>
         </layout>
        </widget>
       </widget>
@@ -534,7 +553,7 @@
   <connection>
    <sender>fpsType</sender>
    <signal>currentIndexChanged(int)</signal>
-   <receiver>stackedWidget</receiver>
+   <receiver>fpsTypes</receiver>
    <slot>setCurrentIndex(int)</slot>
    <hints>
     <hint type="sourcelabel">
