--- a/obs/forms/NameDialog.ui
+++ b/obs/forms/NameDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>555</width>
-    <height>104</height>
+    <height>102</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -33,29 +33,17 @@
      </property>
     </widget>
    </item>
-   <item alignment="Qt::AlignBottom">
-    <widget class="QWidget" name="widget" native="true">
+   <item>
+    <widget class="QLineEdit" name="userText">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
-     <layout class="QFormLayout" name="formLayout">
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="userText">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="text">
-         <string notr="true"/>
-        </property>
-       </widget>
-      </item>
-     </layout>
+     <property name="text">
+      <string notr="true"/>
+     </property>
     </widget>
    </item>
    <item>
