--- a/obs/forms/OBSBasicSettings.ui
+++ b/obs/forms/OBSBasicSettings.ui
@@ -495,7 +495,7 @@
           </widget>
          </item>
          <item row="6" column="1">
-          <widget class="QLabel" name="errorText">
+          <widget class="QLabel" name="videoMsg">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
              <horstretch>0</horstretch>
@@ -507,6 +507,9 @@
            </property>
            <property name="text">
             <string notr="true"/>
+           </property>
+           <property name="wordWrap">
+            <bool>true</bool>
            </property>
           </widget>
          </item>
